--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="LF">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../sass/styles.sass" />
-<title>soh</title>
-</head>
-<body>
-<h1>Oh look a shiny octo journey :D</h1>
-</body>
+  <head>
+    <meta charset="LF" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Nox" />
+    <meta
+      property="og:description"
+      content="Haii there, I am Nox, I am a bot created by @w@ (jk :D)"
+    />
+    <link rel="stylesheet" href="../sass/styles.sass" />
+    <title>soh</title>
+  </head>
+  <body>
+    <h1>Oh look a shiny octo journey :D</h1>
+  </body>
 </html>
