--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="LF" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Nox" />
-    <meta
-      property="og:description"
-      content="Haii there, I am Nox, I am a bot created by @w@ (jk :D)"
-    />
+    <meta property="og:title" content="soh" />
+    <meta property="og:description" content="Look a shiny octo journey!" />
     <link rel="stylesheet" href="../sass/styles.sass" />
     <title>soh</title>
   </head>
