+change, +styles, +themes
.gitignore file, a few styles,test themes that'll probably not be used and thats about it

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="lf"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta property="og:title" content="soh"><meta property="og:description" content="Look a shiny octo journey!"><link rel="stylesheet" href="/index.7ef81eda.css"><title>soh</title></head><body> <h1>Oh look a shiny octo journey :D</h1> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="lf" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="soh" />
+    <meta property="og:description" content="Look a shiny octo journey!" />
+    <link rel="stylesheet" href="index.7ef81eda.css" />
+    <title>soh</title>
+  </head>
+  <body>
+    <h1>Oh look a shiny octo journey :D</h1>
+  </body>
+</html>
