--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -9,6 +9,14 @@
     <title>soh</title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li>
+          <a href="./dark-grey.html">Dark Grey</a>
+          <a href="./snow-storm.html">Snow Storm</a>
+        </li>
+      </ul>
+    </nav>
     <h1>Oh look a shiny octo journey :D</h1>
   </body>
 </html>
