[+version, +changes, +icon, +component, -todo
Updated to version 1.0.1, made a few changes here and there, added an icon, added a component, completed a todo

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="soh" />
     <meta property="og:description" content="Look a shiny octo journey!" />
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="manifest" href="../manifest.webmanifest" />
     <link rel="stylesheet" href="../sass/styles.sass" />
     <title>soh</title>
   </head>
