--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="lf" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="soh" />
-    <meta property="og:description" content="Look a shiny octo journey!" />
-    <link rel="stylesheet" href="index.7ef81eda.css" />
-    <title>soh</title>
-  </head>
-  <body>
-    <h1>Oh look a shiny octo journey :D</h1>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="lf"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta property="og:title" content="soh"><meta property="og:description" content="Look a shiny octo journey!"><link rel="icon shortcut" href="/favicon.366b72d2.ico" type="image/x-icon"><link rel="manifest" href="/up_/manifest.webmanifest"><link rel="stylesheet" href="/index.c718ca06.css"><title>soh</title></head><body> <nav> <ul> <li> <a href="/dark-grey.html">Dark Grey</a> <a href="/snow-storm.html">Snow Storm</a> </li> </ul> </nav> <h1>Oh look a shiny octo journey :D</h1> </body></html>
