--- a/src/pages/dark-grey.html
+++ b/src/pages/dark-grey.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="soh" />
+    <meta property="og:description" content="Look a shiny octo journey!" />
+    <link
+      rel="shortcut icon"
+      href="../assets/favicon.ico"
+      type="image/x-icon"
+    />
     <title>soh</title>
     <link rel="stylesheet" href="../sass/styles.sass" />
   </head>
