+version, +styles, +pages, -todo, -dir, +changes
Updated to version 1.0.2, added styles removed styles, changes in pages, finished a todo, got rid of the public directory and made a changes here and there

--- a/src/pages/blue-grey.html
+++ b/src/pages/blue-grey.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-  <meta charset="LF" />
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="soh" />
   <meta property="og:description" content="Look a shiny octo journey!" />
   <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon" />
-  <link rel="manifest" href="../manifest.webmanifest" />
-  <link rel="stylesheet" href="../sass/styles.sass" />
   <title>soh</title>
+  <link rel="stylesheet" href="../sass/styles.sass" />
 </head>
 
-<body class="home">
+<body class="blue-grey">
   <nav>
     <ul>
       <li>
-        <a href="./blue-grey.html">Dark Grey</a>
-        <a href="./about.html">About</a>
-        <a href="./snow-storm.html">Snow Storm</a>
+        <a href="./snow-storm.html">Snow Storm Theme</a>
       </li>
     </ul>
   </nav>
-  <h1>Oh look a shiny octo journey :D</h1>
+  <h1>Hai this is the dark grey theme!</h1>
+  <p>I like the snow storm theme better</p>
+  <span class="iconify" data-icon="uim:adobe">Yeet</span>
 </body>
 
 </html>
