--- a/src/pages/snow-storm.html
+++ b/src/pages/snow-storm.html
@@ -18,7 +18,7 @@
     <nav>
       <ul>
         <li>
-          <a href="./dark-grey.html">Dark Grey Theme</a>
+          <a href="./blue-grey.html">Dark Grey Theme</a>
         </li>
       </ul>
     </nav>
